test/files/neg/serialversionuid-not-const.check
serialversionuid-not-const.scala:3: error: annotation argument needs to be a constant; found: 13.asInstanceOf[Long]
@SerialVersionUID(13.asInstanceOf[Long]) class C3 extends Serializable
                                 ^
serialversionuid-not-const.scala:4: error: annotation argument needs to be a constant; found: Test.bippy
@SerialVersionUID(Test.bippy) class C4 extends Serializable
                       ^
2 errors
